--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
     <link rel="manifest" href="/site.webmanifest">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+        "@type": "SoftwareSourceCode",
+        "name": "BOX",
+        "description": "Browse, upload, edit, and manage your GitHub files with a clean, intuitive, and powerful interface. No cloning, no command line. Just connect and go.",
+        "programmingLanguage": ["HTML", "CSS", "JavaScript"],
+        "license": "Personal and Educational Use Only",
+     "codeRepository": "https://github.com/AbdurRakiibTalukder/BOX",
+        "author": {
+       "@type": "Person",
+      "name": "Abdur Rakib Talukder"
+  }
+}
+</script>
+
 </head>
 <body>
 
